--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FD4D3F</color>
     <color name="colorPrimary">#EFD9CA</color>
     <color name="colorPrimaryDark">#C4B2A6</color>
+    <color name="red">#FF0000</color>
+
 </resources>
